# ghostkeys

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  widget.html
.github/workflows/: release.yml
scripts/: generate-icons.mjs
src/: App.tsx  Widget.tsx  widget-main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: config.rs  lib.rs  main.rs
src-tauri/src/typer/: keyboard.rs  mistakes.rs  mod.rs  timing.rs
src/components/: ContentInput.tsx  CountdownOverlay.tsx  FileDropzone.tsx  SettingsPanel.tsx  StatusBar.tsx  TextEditor.tsx  TypingControls.tsx
src/components/widget/: ProgressBar.tsx  StatusIndicator.tsx  WidgetControls.tsx
src/hooks/: useConfig.ts  useTypingState.ts
src/lib/: commands.ts  types.ts
src/styles/: globals.css
