[package]
name = "ghostkeys"
version = "0.1.0"
description = "Human typing simulator"
authors = ["ghostkeys"]
edition = "2021"

[lib]
name = "ghostkeys_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.2"
rand = "0.8"
rand_distr = "0.4"
tokio = { version = "1", features = ["full", "sync", "time"] }
parking_lot = "0.12"
once_cell = "1.19"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
